* turntime can now be configured

## Minor Bug Fixes
* Foreground grass was accidentally inefficiently calculated, causing increased load time
* Internal editor's Save As dialog box could cause buffer overflows
* Internal editor's Save As would sometimes overwrite old files without giving a warning
* Level description in internal editor is properly centered
* Internal editor marks a level as changed if the case of the level description is changed
* Pictures named "aaccbbdd" could prevent internal editor tooltip from properly updating
* Show dialog if state.dat is inaccessible when updating top10 in an internal or merging state.dat
* Background menu balls would sometimes vanish on the "Please do not distribute" screen
* Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
* Red helmet animation will no longer skip frames after the intro scrolling animation
* In internal editor, improve mouse lag and fix bug where mouse cursor would sometimes leave visual artifacts when left-clicking in empty space
* Sometimes there was a missing pixel in the internal editor where two lines touch each other
* The 3 timers (best time, flag tag time, current time) are now properly centered on screen
* Fix bike flickering at high zoom
* Fix some minor bike jitters in replay playback when bike or wheel rotates past an angle of 0 degrees (upright position)

## Removed Legacy Features
* It is no longer possible to upgrade from across.res to elma.res
* Readme.txt is no longer autogenerated
* noretrac.inf (software backbuffer) is no longer supported
* fordit.inf (invert volt buttons) is no longer supported
* nemmem.inf (Across memory check) is no longer supported
* files.inf (files are read from ../files, instead of elma.res) is no longer supported
* Debug code to generate elma.res/desclist.txt is removed
* Level files are always unlocked, and you can no longer Save Lock